tests/compile_fail/invalid_color_component_literal.rs
use surgeist_style::ColorComponent;

fn main() {
    let _component = ColorComponent(Some(1.0));
}
