tests/compile_fail/invalid_color_component_literal.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
 --> tests/compile_fail/invalid_color_component_literal.rs:4:22
  |
4 |     let _component = ColorComponent(Some(1.0));
  |                      ^^^^^^^^^^^^^^
  |
note: constructor is not visible here due to private fields
 --> src/value.rs
  |
  | pub struct ColorComponent(Option<f32>);
  |                           ^^^^^^^^^^^ private field
